syntax = "proto3";
package extended_protobuf;

import "extended_protobuf/meta/meta.proto";
import "extended_protobuf/meta/meta_field_options.proto";
import "extended_protobuf/meta/meta_message_options.proto";

message Department {
  option(meta.msg.type) = ENTITY;
  option(meta.msg.classification) = "Classification.Sensitive";
  option(meta.msg.team) = "TeamA";

  int32 id = 1;
  string name = 2;
}

message Person {
  option(meta.msg.type) = ENTITY;
  option(meta.msg.classification_enum) = HighlyConfidential;
  option(meta.msg.team) = "TeamB";
  option(meta.msg.bool_feature) = true;
  option(meta.msg.alert_channel) = "#alerts";

  string name = 1;
  int32 id = 2;
  string email = 3;
  Department dept = 4;
}
